# cargo-aoc

./: .languages.toml  Cargo.toml  README.md  languages.toml
src/: assert.rs  error.rs  main.rs  run.rs  setup.rs  tally.rs  tally2.rs  task_config.rs  test.rs
src/compiler/: mod.rs  register.rs  trait.rs
src/compiler/impls/: mod.rs  rust.rs
src/language/: config.rs  dynamic.rs  mod.rs  register.rs  trait.rs
src/language/impls/: mod.rs  python.rs  rust.rs
src/tally/: ctx.rs  fns.rs  mod.rs  print_fns.rs  types.rs  util.rs
src/util/: file.rs  mod.rs  request.rs  submit.rs  tally_util.rs
tests/: folder_structure.rs  run.rs  setup.rs  token.rs
tests/common/: mod.rs
tests/files/: .languages.toml  main.lisp  main.py  main.rs
