[package]
name = "cargo-aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "cargo", "string"] }
dotenv = "0.15.0"
reqwest = "0.12.24"
serde = "1.0.228"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.48.0", features = ["full"] }

sanitize_html = { version = "0.10.0", optional = true }
criterion = { version = "0.7.0", optional = true }
indicatif = { version = "0.18.2", optional = true }
duct = "1.1.0"
thiserror = "2.0.17"
regex = "1.12.2"
serde_regex = "1.1.0"
toml = "0.9.10"
futures = "0.3.31"


[features]
default = ["bench", "tally", "submit"]
bench = ["criterion"]
tally = ["indicatif"]
submit = ["sanitize_html"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
